Fix truncated content in the Create Parent dialog. Close #5365

--- a/scss/components/_createParent.scss
+++ b/scss/components/_createParent.scss
@@ -10,6 +10,7 @@
 		// Text is added asynchonously, so set a height for dialog auto-sizing
 		min-height: 1em;
 		margin-bottom: .5em;
+		max-width: 500px; // Avoid expanding the dialog too wide; instead, in some languages, the intro text will wrap.
 	}
 	
 	.body {
